--- a/src/App.scss
+++ b/src/App.scss
@@ -10,49 +10,40 @@ body {
 }
 
 .header {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  height: 100px;
-  a {
-    margin: 0 28px;
-    text-decoration: none;
-    color: #181818;
-    font-size: 12px;
-    font-weight: 600;
-    font-family: "Poppins";
+  height: 40rem;
+  h1 {
+    font-size: 5.25rem;
+    font-weight: 800;
   }
 }
 
-.container {
-  position: relative;
-  width: 1280px;
-  min-width: 1280px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  .page {
-    position: absolute;
-    .inner {
-      display: flex;
-      justify-content: center;
-      h1 {
-        font-family: "Bebas Neue";
-        font-size: 52px;
-        letter-spacing: 0.1rem;
-        .line-wrap {
-          overflow: hidden;
-          height: 66px;
-        }
+.skryta-absolute {
+  height: 30rem;
+}
+
+.page {
+  position: absolute;
+  height: 40rem;
+
+  .inner {
+    display: flex;
+    justify-content: center;
+    h1 {
+      font-family: "Bebas Neue";
+      font-size: 52px;
+      letter-spacing: 0.1rem;
+      .line-wrap {
+        overflow: hidden;
+        height: 70px;
       }
-      p {
-        font-family: "Poppins";
-        margin-top: 200px;
-        width: 340px;
-        font-weight: 300;
-        line-height: 24px;
-        font-size: 14px;
-      }
+    }
+    p {
+      font-family: "Poppins";
+      margin-top: 200px;
+      width: 340px;
+      font-weight: 300;
+      line-height: 24px;
+      font-size: 14px;
     }
   }
 }
