--- a/src/App.scss
+++ b/src/App.scss
@@ -6,44 +6,7 @@
 }
 
 body {
-  font-family: "Panchang", sans-serif;
+  font-family: "Roboto Slab", serif;
 }
 
-@import url("https://fonts.googleapis.com/css?family=Bebas+Neue|Poppins:300,400&display=swap");
-
-.inner {
-  h1 {
-    font-family: "Bebas Neue";
-    font-size: 52px;
-    letter-spacing: 0.1rem;
-    .line-wrap {
-      overflow: hidden;
-      height: 66px;
-    }
-  }
-  p {
-    font-family: "Poppins";
-    margin-top: 200px;
-    width: 340px;
-    font-weight: 300;
-    line-height: 24px;
-    font-size: 14px;
-  }
-}
-
-.page-enter {
-  opacity: 0;
-}
-.page-enter-active {
-  opacity: 1;
-  transition: opacity 400ms;
-  transition-delay: 600ms;
-}
-.page-exit {
-  opacity: 1;
-}
-.page-exit-active {
-  opacity: 0;
-  transition: opacity 400ms;
-}
 @import "./styles/variables";
