--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,7 @@
 @tailwind utilities;
 
 @layer components {
-  .btn-blue {
-    @apply py-2 px-4 bg-blue-500 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
-  }
-  .centerCenter {
-    @apply flex justify-center items-center;
+  .auto-padding {
+    @apply px-12;
   }
 }
