--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,4 +6,7 @@ $black: #000;
 $white: #fff;
 
 @import "./components/header";
+@import "./components/footer";
+@import "./components/gallery";
+
 @import "./pages/home";
