--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,17 @@ $text-color: #214ba6;
 $default-orange: #ff9f74;
 $black: #000;
 $white: #fff;
+$dark-white: #fdfffd;
+
+//fonts
+
+.dancing-nadpis {
+  font-family: "Dancing Script", cursive;
+}
+
+//font-sizes
+
+//footer-sizes
 
 @import "./components/header";
 @import "./components/footer";
