--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,6 @@
 * {
   margin: 0;
   padding: 0;
+  list-style-type: none;
   box-sizing: border-box;
-  list-style: none;
 }
-
-body {
-  font-family: "Roboto Slab", serif;
-}
-
-@import "./styles/variables";
